--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - bundle install
   - npm install
 before_script:
-  - psql -c 'create database pgapp_development; create database pgapp_development;' -U postgres
+  - psql -c 'create database pgapp_development; create database pgapp_test;' -U postgres
   - rails db:migrate
 script:
   - rspec
