--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: ruby
 rvm:
   - 2.5.1
 install:
-  - bundle install
+  - bundle
   - npm install
 before_script:
-  - psql -c 'create database pgapp_test;' -U postgres
+  - psql -c 'create database pgapp_development;' -U postgres
   - psql -c 'create database pgapp_test;' -U postgres
   - rails db:migrate
 script:
