--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
-  - 2.5.1
+  - 2.5.0
 install:
   - bundle
   - npm install
@@ -10,3 +10,4 @@ before_script:
   - rails db:migrate
 script:
   - rspec
+  - rubocop
